// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test EmergencyContactAddNew onCancel 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "marginBottom": 0,
      },
    ]
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "width": "100%",
          "zIndex": 2,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#FAFAFA",
            "borderColor": "#BFBFBF",
            "borderWidth": 0.5,
            "height": 88,
            "opacity": 0,
            "position": "absolute",
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "height": 44,
              "justifyContent": "center",
              "opacity": 1,
              "width": 44,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#262626",
                  "fontFamily": "antoutline",
                  "fontSize": 27,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }
          >
            
          </Text>
        </View>
        <View
          styles={
            Object {
              "height": 44,
              "width": 44,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "height": 44,
            "justifyContent": "center",
            "marginRight": 0,
            "transform": Array [
              Object {
                "translateY": 0,
              },
              Object {
                "translateX": 0,
              },
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#000",
                "fontFamily": "SFProDisplay-Semibold",
                "fontSize": 24,
                "lineHeight": 32,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "color": "#262626",
                "marginLeft": 16,
                "width": "100%",
              },
            ]
          }
        >
          Tạo liên hệ
        </Text>
      </View>
    </View>
    <RCTScrollView
      contentContainerStyle={
        Array [
          Object {
            "paddingBottom": 88,
          },
          undefined,
        ]
      }
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      refreshControl={
        <RefreshControlMock
          refreshing={false}
        />
      }
      scrollEventThrottle={16}
      showsVerticalScrollIndicator={false}
      style={
        Object {
          "flex": 1,
          "marginBottom": -88,
          "paddingTop": 16,
          "transform": Array [
            Object {
              "translateY": 0,
            },
          ],
        }
      }
    >
      <RCTRefreshControl />
      <View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#E8E8E8",
                "borderRadius": 20,
                "borderWidth": 1,
                "marginBottom": 16,
                "paddingBottom": 24,
                "paddingHorizontal": 16,
                "paddingTop": 8,
              },
              undefined,
            ]
          }
        >
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            placeholder="Tên"
            rejectResponderTermination={true}
            style={
              Object {
                "borderBottomColor": "#E8E8E8",
                "borderBottomWidth": 1,
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 16,
                "height": 58,
                "lineHeight": 24,
                "width": "100%",
              }
            }
            testID="ON_CHANGE_NAME_EMERGENCY_CONTACT"
            underlineColorAndroid={null}
            value=""
          />
          <TextInput
            allowFontScaling={true}
            keyboardType="phone-pad"
            onChangeText={[Function]}
            placeholder="Số điện thoại"
            rejectResponderTermination={true}
            style={
              Object {
                "borderBottomColor": "#E8E8E8",
                "borderBottomWidth": 1,
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 16,
                "height": 58,
                "lineHeight": 24,
                "width": "100%",
              }
            }
            testID="ON_CHANGE_PHONE_EMERGENCY_CONTACT"
            underlineColorAndroid={null}
            value=""
          />
        </View>
      </View>
    </RCTScrollView>
  </RCTSafeAreaView>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "marginRight": 4,
          "opacity": 1,
          "paddingVertical": 24,
          "width": "100%",
        }
      }
      testID="VIEW_BUTTON_BOTTOM_LEFT_BUTTON"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#00979D",
              "fontFamily": "SFProDisplay-Semibold",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        Hủy
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "marginLeft": 4,
          "opacity": 1,
          "paddingVertical": 24,
          "width": "100%",
        }
      }
      testID="VIEW_BUTTON_BOTTOM_RIGHT_BUTTON"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#BFBFBF",
              "fontFamily": "SFProDisplay-Semibold",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        Lưu
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`test EmergencyContactAddNew onChangeNameText 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "marginBottom": 0,
      },
    ]
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "width": "100%",
          "zIndex": 2,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#FAFAFA",
            "borderColor": "#BFBFBF",
            "borderWidth": 0.5,
            "height": 88,
            "opacity": 0,
            "position": "absolute",
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "height": 44,
              "justifyContent": "center",
              "opacity": 1,
              "width": 44,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#262626",
                  "fontFamily": "antoutline",
                  "fontSize": 27,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }
          >
            
          </Text>
        </View>
        <View
          styles={
            Object {
              "height": 44,
              "width": 44,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "height": 44,
            "justifyContent": "center",
            "marginRight": 0,
            "transform": Array [
              Object {
                "translateY": 0,
              },
              Object {
                "translateX": 0,
              },
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#000",
                "fontFamily": "SFProDisplay-Semibold",
                "fontSize": 24,
                "lineHeight": 32,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "color": "#262626",
                "marginLeft": 16,
                "width": "100%",
              },
            ]
          }
        >
          Tạo liên hệ
        </Text>
      </View>
    </View>
    <RCTScrollView
      contentContainerStyle={
        Array [
          Object {
            "paddingBottom": 88,
          },
          undefined,
        ]
      }
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      refreshControl={
        <RefreshControlMock
          refreshing={false}
        />
      }
      scrollEventThrottle={16}
      showsVerticalScrollIndicator={false}
      style={
        Object {
          "flex": 1,
          "marginBottom": -88,
          "paddingTop": 16,
          "transform": Array [
            Object {
              "translateY": 0,
            },
          ],
        }
      }
    >
      <RCTRefreshControl />
      <View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#E8E8E8",
                "borderRadius": 20,
                "borderWidth": 1,
                "marginBottom": 16,
                "paddingBottom": 24,
                "paddingHorizontal": 16,
                "paddingTop": 8,
              },
              undefined,
            ]
          }
        >
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            placeholder="Tên"
            rejectResponderTermination={true}
            style={
              Object {
                "borderBottomColor": "#E8E8E8",
                "borderBottomWidth": 1,
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 16,
                "height": 58,
                "lineHeight": 24,
                "width": "100%",
              }
            }
            testID="ON_CHANGE_NAME_EMERGENCY_CONTACT"
            underlineColorAndroid={null}
            value="ABC"
          />
          <TextInput
            allowFontScaling={true}
            keyboardType="phone-pad"
            onChangeText={[Function]}
            placeholder="Số điện thoại"
            rejectResponderTermination={true}
            style={
              Object {
                "borderBottomColor": "#E8E8E8",
                "borderBottomWidth": 1,
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 16,
                "height": 58,
                "lineHeight": 24,
                "width": "100%",
              }
            }
            testID="ON_CHANGE_PHONE_EMERGENCY_CONTACT"
            underlineColorAndroid={null}
            value=""
          />
        </View>
      </View>
    </RCTScrollView>
  </RCTSafeAreaView>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "marginRight": 4,
          "opacity": 1,
          "paddingVertical": 24,
          "width": "100%",
        }
      }
      testID="VIEW_BUTTON_BOTTOM_LEFT_BUTTON"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#00979D",
              "fontFamily": "SFProDisplay-Semibold",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        Hủy
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "marginLeft": 4,
          "opacity": 1,
          "paddingVertical": 24,
          "width": "100%",
        }
      }
      testID="VIEW_BUTTON_BOTTOM_RIGHT_BUTTON"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#BFBFBF",
              "fontFamily": "SFProDisplay-Semibold",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        Lưu
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`test EmergencyContactAddNew onSave success 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "marginBottom": 0,
      },
    ]
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "width": "100%",
          "zIndex": 2,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#FAFAFA",
            "borderColor": "#BFBFBF",
            "borderWidth": 0.5,
            "height": 88,
            "opacity": 0,
            "position": "absolute",
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "height": 44,
              "justifyContent": "center",
              "opacity": 1,
              "width": 44,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#262626",
                  "fontFamily": "antoutline",
                  "fontSize": 27,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }
          >
            
          </Text>
        </View>
        <View
          styles={
            Object {
              "height": 44,
              "width": 44,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "height": 44,
            "justifyContent": "center",
            "marginRight": 0,
            "transform": Array [
              Object {
                "translateY": 0,
              },
              Object {
                "translateX": 0,
              },
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#000",
                "fontFamily": "SFProDisplay-Semibold",
                "fontSize": 24,
                "lineHeight": 32,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "color": "#262626",
                "marginLeft": 16,
                "width": "100%",
              },
            ]
          }
        >
          Tạo liên hệ
        </Text>
      </View>
    </View>
    <RCTScrollView
      contentContainerStyle={
        Array [
          Object {
            "paddingBottom": 88,
          },
          undefined,
        ]
      }
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      refreshControl={
        <RefreshControlMock
          refreshing={false}
        />
      }
      scrollEventThrottle={16}
      showsVerticalScrollIndicator={false}
      style={
        Object {
          "flex": 1,
          "marginBottom": -88,
          "paddingTop": 16,
          "transform": Array [
            Object {
              "translateY": 0,
            },
          ],
        }
      }
    >
      <RCTRefreshControl />
      <View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#E8E8E8",
                "borderRadius": 20,
                "borderWidth": 1,
                "marginBottom": 16,
                "paddingBottom": 24,
                "paddingHorizontal": 16,
                "paddingTop": 8,
              },
              undefined,
            ]
          }
        >
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            placeholder="Tên"
            rejectResponderTermination={true}
            style={
              Object {
                "borderBottomColor": "#E8E8E8",
                "borderBottomWidth": 1,
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 16,
                "height": 58,
                "lineHeight": 24,
                "width": "100%",
              }
            }
            testID="ON_CHANGE_NAME_EMERGENCY_CONTACT"
            underlineColorAndroid={null}
            value=""
          />
          <TextInput
            allowFontScaling={true}
            keyboardType="phone-pad"
            onChangeText={[Function]}
            placeholder="Số điện thoại"
            rejectResponderTermination={true}
            style={
              Object {
                "borderBottomColor": "#E8E8E8",
                "borderBottomWidth": 1,
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 16,
                "height": 58,
                "lineHeight": 24,
                "width": "100%",
              }
            }
            testID="ON_CHANGE_PHONE_EMERGENCY_CONTACT"
            underlineColorAndroid={null}
            value=""
          />
        </View>
      </View>
    </RCTScrollView>
  </RCTSafeAreaView>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "marginRight": 4,
          "opacity": 1,
          "paddingVertical": 24,
          "width": "100%",
        }
      }
      testID="VIEW_BUTTON_BOTTOM_LEFT_BUTTON"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#00979D",
              "fontFamily": "SFProDisplay-Semibold",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        Hủy
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "marginLeft": 4,
          "opacity": 1,
          "paddingVertical": 24,
          "width": "100%",
        }
      }
      testID="VIEW_BUTTON_BOTTOM_RIGHT_BUTTON"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#BFBFBF",
              "fontFamily": "SFProDisplay-Semibold",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        Lưu
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`test EmergencyContactAddNew onTextPhoneChange 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "marginBottom": 0,
      },
    ]
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "width": "100%",
          "zIndex": 2,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#FAFAFA",
            "borderColor": "#BFBFBF",
            "borderWidth": 0.5,
            "height": 88,
            "opacity": 0,
            "position": "absolute",
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "height": 44,
              "justifyContent": "center",
              "opacity": 1,
              "width": 44,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#262626",
                  "fontFamily": "antoutline",
                  "fontSize": 27,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }
          >
            
          </Text>
        </View>
        <View
          styles={
            Object {
              "height": 44,
              "width": 44,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "height": 44,
            "justifyContent": "center",
            "marginRight": 0,
            "transform": Array [
              Object {
                "translateY": 0,
              },
              Object {
                "translateX": 0,
              },
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#000",
                "fontFamily": "SFProDisplay-Semibold",
                "fontSize": 24,
                "lineHeight": 32,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "color": "#262626",
                "marginLeft": 16,
                "width": "100%",
              },
            ]
          }
        >
          Tạo liên hệ
        </Text>
      </View>
    </View>
    <RCTScrollView
      contentContainerStyle={
        Array [
          Object {
            "paddingBottom": 88,
          },
          undefined,
        ]
      }
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      refreshControl={
        <RefreshControlMock
          refreshing={false}
        />
      }
      scrollEventThrottle={16}
      showsVerticalScrollIndicator={false}
      style={
        Object {
          "flex": 1,
          "marginBottom": -88,
          "paddingTop": 16,
          "transform": Array [
            Object {
              "translateY": 0,
            },
          ],
        }
      }
    >
      <RCTRefreshControl />
      <View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#E8E8E8",
                "borderRadius": 20,
                "borderWidth": 1,
                "marginBottom": 16,
                "paddingBottom": 24,
                "paddingHorizontal": 16,
                "paddingTop": 8,
              },
              undefined,
            ]
          }
        >
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            placeholder="Tên"
            rejectResponderTermination={true}
            style={
              Object {
                "borderBottomColor": "#E8E8E8",
                "borderBottomWidth": 1,
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 16,
                "height": 58,
                "lineHeight": 24,
                "width": "100%",
              }
            }
            testID="ON_CHANGE_NAME_EMERGENCY_CONTACT"
            underlineColorAndroid={null}
            value=""
          />
          <TextInput
            allowFontScaling={true}
            keyboardType="phone-pad"
            onChangeText={[Function]}
            placeholder="Số điện thoại"
            rejectResponderTermination={true}
            style={
              Object {
                "borderBottomColor": "#E8E8E8",
                "borderBottomWidth": 1,
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 16,
                "height": 58,
                "lineHeight": 24,
                "width": "100%",
              }
            }
            testID="ON_CHANGE_PHONE_EMERGENCY_CONTACT"
            underlineColorAndroid={null}
            value="123"
          />
        </View>
      </View>
    </RCTScrollView>
  </RCTSafeAreaView>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "marginRight": 4,
          "opacity": 1,
          "paddingVertical": 24,
          "width": "100%",
        }
      }
      testID="VIEW_BUTTON_BOTTOM_LEFT_BUTTON"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#00979D",
              "fontFamily": "SFProDisplay-Semibold",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        Hủy
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "marginLeft": 4,
          "opacity": 1,
          "paddingVertical": 24,
          "width": "100%",
        }
      }
      testID="VIEW_BUTTON_BOTTOM_RIGHT_BUTTON"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#BFBFBF",
              "fontFamily": "SFProDisplay-Semibold",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        Lưu
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`test EmergencyContactAddNew render 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "marginBottom": 0,
      },
    ]
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "width": "100%",
          "zIndex": 2,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#FAFAFA",
            "borderColor": "#BFBFBF",
            "borderWidth": 0.5,
            "height": 88,
            "opacity": 0,
            "position": "absolute",
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "height": 44,
              "justifyContent": "center",
              "opacity": 1,
              "width": 44,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#262626",
                  "fontFamily": "antoutline",
                  "fontSize": 27,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }
          >
            
          </Text>
        </View>
        <View
          styles={
            Object {
              "height": 44,
              "width": 44,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "height": 44,
            "justifyContent": "center",
            "marginRight": 0,
            "transform": Array [
              Object {
                "translateY": 0,
              },
              Object {
                "translateX": 0,
              },
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#000",
                "fontFamily": "SFProDisplay-Semibold",
                "fontSize": 24,
                "lineHeight": 32,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "color": "#262626",
                "marginLeft": 16,
                "width": "100%",
              },
            ]
          }
        >
          Tạo liên hệ
        </Text>
      </View>
    </View>
    <RCTScrollView
      contentContainerStyle={
        Array [
          Object {
            "paddingBottom": 88,
          },
          undefined,
        ]
      }
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      refreshControl={
        <RefreshControlMock
          refreshing={false}
        />
      }
      scrollEventThrottle={16}
      showsVerticalScrollIndicator={false}
      style={
        Object {
          "flex": 1,
          "marginBottom": -88,
          "paddingTop": 16,
          "transform": Array [
            Object {
              "translateY": 0,
            },
          ],
        }
      }
    >
      <RCTRefreshControl />
      <View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#E8E8E8",
                "borderRadius": 20,
                "borderWidth": 1,
                "marginBottom": 16,
                "paddingBottom": 24,
                "paddingHorizontal": 16,
                "paddingTop": 8,
              },
              undefined,
            ]
          }
        >
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            placeholder="Tên"
            rejectResponderTermination={true}
            style={
              Object {
                "borderBottomColor": "#E8E8E8",
                "borderBottomWidth": 1,
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 16,
                "height": 58,
                "lineHeight": 24,
                "width": "100%",
              }
            }
            testID="ON_CHANGE_NAME_EMERGENCY_CONTACT"
            underlineColorAndroid={null}
            value=""
          />
          <TextInput
            allowFontScaling={true}
            keyboardType="phone-pad"
            onChangeText={[Function]}
            placeholder="Số điện thoại"
            rejectResponderTermination={true}
            style={
              Object {
                "borderBottomColor": "#E8E8E8",
                "borderBottomWidth": 1,
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 16,
                "height": 58,
                "lineHeight": 24,
                "width": "100%",
              }
            }
            testID="ON_CHANGE_PHONE_EMERGENCY_CONTACT"
            underlineColorAndroid={null}
            value=""
          />
        </View>
      </View>
    </RCTScrollView>
  </RCTSafeAreaView>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "marginRight": 4,
          "opacity": 1,
          "paddingVertical": 24,
          "width": "100%",
        }
      }
      testID="VIEW_BUTTON_BOTTOM_LEFT_BUTTON"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#00979D",
              "fontFamily": "SFProDisplay-Semibold",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        Hủy
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "marginLeft": 4,
          "opacity": 1,
          "paddingVertical": 24,
          "width": "100%",
        }
      }
      testID="VIEW_BUTTON_BOTTOM_RIGHT_BUTTON"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#BFBFBF",
              "fontFamily": "SFProDisplay-Semibold",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        Lưu
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;
